Fixed mobile menu transparency and spacing.

--- a/themes/wirehaiku/assets/basics.scss
+++ b/themes/wirehaiku/assets/basics.scss
@@ -140,12 +140,6 @@ pre {
         line-height: 2.75rem;
         padding: 0.75rem 1rem;
     }
-
-    &.feature code {
-        background: linear-gradient(45deg, rgba(0, 0, 0, 0.5) 45%, rgba(0, 0, 0, 0.2) 100%);
-        color: $fore;
-        text-shadow: 0.125rem 0.125rem 0.25rem #000;
-    }
 }
 
 // Header & Navigation Elements
@@ -203,6 +197,7 @@ nav {
 
     ul {
         list-style-type: none;
+        padding: 0;
         text-align: center;
     }
 }
@@ -253,6 +248,12 @@ p.themes {
     a {
         margin: 0.125rem;
     }
+}
+
+pre.feature code {
+    background: linear-gradient(45deg, rgba(0, 0, 0, 0.5) 45%, rgba(0, 0, 0, 0.2) 100%);
+    color: $fore;
+    text-shadow: 0.125rem 0.125rem 0.25rem #000;
 }
 
 table.tags {
