--- a/themes/wirehaiku/assets/query-mobile.scss
+++ b/themes/wirehaiku/assets/query-mobile.scss
@@ -42,13 +42,10 @@
         max-height: 0;
         overflow: hidden;
 
-        a {
-            background: inherit;
-        }
-
         li {
             display: block;
-            margin: 0;
+            margin: 0.5rem 0;
+            padding: 0 0.5rem;
             width: 100%;
 
             &:first-child {
@@ -62,7 +59,7 @@
     }
 
     pre code {
-        font-size: 1rem;
+        font-size: 1.125rem;
     }
 
     div.list li span {
